fixed image not showing

--- a/ID_S10227737K_Nur Muhammad_Assg1_website/style.css
+++ b/ID_S10227737K_Nur Muhammad_Assg1_website/style.css
@@ -29,10 +29,9 @@ body {
 .skills,
 .portfolio,
 .contact {
-  position: relative;
   max-width: 100%;
   height: 60px;
-  margin-left: 15%;
+  padding-left: 10%;
 }
 
 .simp {
